2016-04-30  6.9.3-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.3-9, GIT revision 10713:b335c4f:20160429.

2016-04-12  6.9.3-9 Cristy  <quetzlzacatenango@image...>
  * The txt coder now properly reports Lab colors (reference
    https://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=2944).

2016-04-11  6.9.3-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.3-8, GIT revision 10690:d058a53:20160411

2016-03-22  6.9.3-8 Cristy  <quetzlzacatenango@image...>
  * Respect gravity when rendering text (e.g. convert -gravity center my.txt)
  * Return empty string for %d property and no directory (reference
    https://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=29365)
  * Return filename for the %i property (reference
    https://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=29364).
  * Fixed lost pixels in frequency space (reference
    https://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=29374).

2016-03-06  6.9.3-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.3-7, GIT revision 10628:810a9fe:20160306

2016-03-05  6.9.3-7 Dirk Lemstra <dirk@lem.....org>
  * -size can now be used the specify the maximum width/height for the
    following vector formats:
      * SVG (when librsvg and cairo are being used).
      * EMF (did not work on Windows).

2016-02-29  6.9.3-7 Cristy  <quetzlzacatenango@image...>
  * Fixed text alignment issue for label: / coder: (reference
    https://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=29223).

2016-02-27  6.9.3-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.3-6, GIT revision 10597:83584a1:20160228.

2016-02-25  6.9.3-6 Cristy  <quetzlzacatenango@image...>
  * Ensure TXT: image format survives round-trip (reference
    https://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=29206).

2016-02-21  6.9.2-6 Dirk Lemstra <dirk@lem.....org>
  * Added wavelet denoise.

2016-02-20  6.9.3-5 Cristy  <quetzlzacatenango@image...>